# fterm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SOSterm.desktop  build.sh  find_bar.py  fterm.desktop  install.sh  main.py  mainwindow.py  preferences_dialog.py  release.sh  requirements.txt  session_manager.py  session_tab_manager.py  settings.py  splash_screen.py  ssh_dialogs.py  ssh_session_store.py  ssh_sidebar.py  terminal_process.py  terminal_widget.py  themes.py  uninstall.sh  update_checker.py
colorschemes/: SOStermDark.colorscheme  SOStermDracula.colorscheme  SOStermGruvbox.colorscheme  SOStermLight.colorscheme  SOStermMonokai.colorscheme  SOStermNord.colorscheme  SOStermSolarizedDark.colorscheme
resources/: SOSterm.qrc
scripts/: install.sh  release.sh  uninstall.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  sessionmanager.cpp  sessionmanager.h  sessiontabmanager.cpp  sessiontabmanager.h  settings.cpp  settings.h  splashscreen.cpp  splashscreen.h  sshdialogs.cpp  sshdialogs.h  sshsessionstore.cpp  sshsessionstore.h  sshsidebar.cpp  sshsidebar.h  thememanager.cpp  thememanager.h  updatechecker.cpp  updatechecker.h  version.h.in
